--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <p>In at accumsan risus. Nam id volutpat ante. Etiam vel mi
                 mattis, vulputate nunc nec, sodales nibh. Etiam nulla
                 magna, gravida eget ultricies sit amet, hendrerit in lorem.</p>
-                <a href="Read More">Read More</a>
+                <a href="#Read More">Read More</a>
             </div>
 
             <div class="blog-2">
@@ -174,7 +174,7 @@
                 <p>Winter Is Comming</p>
                 <p>3 Nov, 2014</p>
                 <p>In at accumsan risus. Nam id volutpat ante. Etiam vel mimattis, vulputate nunc nec, sodales nibh. Etiam nulla magna, gravida eget ultricies sit amet, hendrerit in lorem.</p>
-                <a href="Read More">Read More</a>
+                <a href="#Read More">Read More</a>
             </div>
 
             <div class="blog-1">
@@ -182,7 +182,7 @@
                 <p>The Illustration</p>
                 <p>3 Nov, 2014</p>
                 <p>In at accumsan risus. Nam id volutpat ante. Etiam vel mi mattis, vulputate nunc nec, sodales nibh. Etiam nulla magna, gravida eget ultricies sit amet, hendrerit in lorem.</p>
-                <a href="Read More">Read More</a>
+                <a href="#Read More">Read More</a>
             </div>
 
         </div>
